--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#mprojects" class="menu-btn">Major Projects</a></li>
-                <li><a href="#sprojects" class="menu-btn">Small Projects</a></li>
+                <li><a href="#mprojects" class="menu-btn">Projects</a></li>
+                <li><a href="#sprojects" class="menu-btn">Skills</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -37,7 +37,7 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Hello, I am</div>
-                <div class="text-2">Benedek Hegdus</div>
+                <div class="text-2">Benedek Hegedus</div>
                 <div class="text-3">Welcome to my portfolio! <span class="typing"></span></div>
             </div>
         </div>
@@ -54,7 +54,7 @@
                     <a href="#">Download CV</a>
                 </div>
                 <div class="column right">
-                    <div class="text">Other interests<span class="typing-2"></span></div>
+                    <div class="text">Contact, links<span class="typing-2"></span></div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
                     <a href="#">Download CV</a>
                 </div>
@@ -65,27 +65,27 @@
     <!-- mprojects section start -->
     <section class="mprojects" id="mprojects">
         <div class="max-width">
-            <h2 class="title">My mprojects</h2>
+            <h2 class="title">Projects</h2>
             <div class="mproj-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-ruler-combined"></i>
+                        <div class="text">Quality Control Rig</div>
+                        <p>An automated QC rig designed for Casca 3D printed insoles.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-hand-paper"></i>
+                        <div class="text">Gesture RC car</div>
+                        <p>An RC car controlled with hand keypoints.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-hockey-puck"></i>
+                        <div class="text">Hockey robot</div>
+                        <p>A hockey dangling robot that tries to hit the puck away from the player.</p>
                     </div>
                 </div>
                </div>
@@ -96,7 +96,7 @@
     <!-- sprojects section start -->
     <section class="sprojects" id="sprojects">
         <div class="max-width">
-            <h2 class="title">My mprojects</h2>
+            <h2 class="title">Skills</h2>
             <div class="sproj-content">
                 <div class="card">
                     <div class="box">
