--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Benedek Hegedus</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -49,8 +50,8 @@
             <h2 class="title">About me</h2>
             <div class="about-content">
                 <div class="column left">
-                    <div class="text">Science, Engineering, Technology, Mathematics<span class="typing-2"></span></div>
-                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorite of which is computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I have faith that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
+                    <div class="text">Science, Technology, Engineering, Mathematics<span class="typing-2"></span></div>
+                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
                     <a href="#">Download CV</a>
                 </div>
                 <div class="column right">
