add contact icons

--- a/index.html
+++ b/index.html
@@ -52,12 +52,22 @@
                 <div class="column left">
                     <div class="text">Science, Technology, Engineering, Mathematics<span class="typing-2"></span></div>
                     <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
-                    <a href="#">Download CV</a>
                 </div>
                 <div class="column right">
-                    <div class="text">Contact, links<span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                    <div class="text"><span class="typing-2"></span></div>
+                        <div class="contact-btns">
+                            <a href="https://github.com/beni045">  
+                                <i class="fab fa-github-square"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/benedek-hegedus/">  
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <div class="email-btn">  
+                                <i class="fas fa-envelope-square"></i>
+                                <!-- <i class="fas fa-clipboard"></i> -->
+                            </div>
+                        </div>
+                    <a href="#" class="downloadcv-btn">Download CV</a>
                 </div>
             </div>
         </div>
