--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="home-content">
                 <div class="text-1">Hello, I am</div>
                 <div class="text-2">Benedek Hegedus</div>
-                <div class="text-3">Welcome to my portfolio! <span class="typing"></span></div>
+                <div class="text-3">Welcome to my portfolio website! <span class="typing"></span></div>
             </div>
         </div>
     </section>
@@ -67,7 +67,7 @@
                                 <!-- <i class="fas fa-clipboard"></i> -->
                             </div>
                         </div>
-                    <a href="#" class="downloadcv-btn">Download CV</a>
+                    <a href="/bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
