--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                                 <!-- <i class="fas fa-clipboard"></i> -->
                             </div>
                         </div>
-                    <a href="/bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf">Download CV</a>
+                    <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf">Download CV</a>
                 </div>
             </div>
         </div>
