--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
                             </a>
                             <div class="email-btn">  
                                 <i class="fas fa-envelope-square"></i>
-                                <!-- <i class="fas fa-clipboard"></i> -->
+                                <div class="tooltip">
+                                    <span class="tooltiptext"><i class="fas fa-clipboard"></i> b.hegedus45@gmail.com</span>
+                                  </div>
+
                             </div>
                         </div>
                     <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf">Download CV</a>
