add clipboard color toggle to email button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                             <div class="email-btn">  
                                 <i class="fas fa-envelope-square"></i>
                                 <div class="tooltip">
-                                    <span class="tooltiptext"><i class="fas fa-clipboard"></i> b.hegedus45@gmail.com</span>
+                                    <span class="tooltiptext"><i class="fas fa-clipboard" id="email-clipboard"></i> b.hegedus45@gmail.com</span>
                                   </div>
 
                             </div>
