add project page

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">B<span>H</span></a></div>
+            <div class="logo"><a href="#home">B<span>H</span></a></div>
             <ul class="menu">
                 <li><a href="#home" class="menu-btn">Home</a></li>
                 <li><a href="#about" class="menu-btn">About</a></li>
@@ -81,21 +81,21 @@
         <div class="max-width">
             <h2 class="title">Projects</h2>
             <div class="mproj-content">
-                <div class="card">
+                <div class="card qc-project">
                     <div class="box">
                         <i class="fas fa-ruler-combined"></i>
                         <div class="text">Quality Control Rig</div>
                         <p>An automated QC rig designed for Casca 3D printed insoles.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card gesturecare-project">
                     <div class="box">
                         <i class="fas fa-hand-paper"></i>
                         <div class="text">Gesture RC car</div>
                         <p>An RC car controlled with hand keypoints.</p>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card hockey-project">
                     <div class="box">
                         <i class="fas fa-hockey-puck"></i>
                         <div class="text">Hockey robot</div>
