--- a/pages/hockeyrobot.html
+++ b/pages/hockeyrobot.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website</title>
+    <title>Benedek Hegedus</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
@@ -19,12 +20,12 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="#">Portfo<span>lio.</span></a></div>
+            <div class="logo"><a href="../index.html#home">B<span>H</span></a></div>
             <ul class="menu">
-                <li><a href="#home" class="menu-btn">Home</a></li>
-                <li><a href="#about" class="menu-btn">About</a></li>
-                <li><a href="#mprojects" class="menu-btn">mprojects</a></li>
-                <li><a href="#sprojects" class="menu-btn">sprojects</a></li>
+                <li><a href="../index.html#home" class="menu-btn">Home</a></li>
+                <li><a href="../index.html#about" class="menu-btn">About</a></li>
+                <li><a href="../index.html#mprojects" class="menu-btn">Projects</a></li>
+                <li><a href="../index.html#sprojects" class="menu-btn">Skills</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -32,97 +33,49 @@
         </div>
     </nav>
 
-    <!-- home section start -->
-    <section class="home" id="home">
-        <div class="max-width">
-            <div class="home-content">
-                <div class="text-1">Hello, I am</div>
-                <div class="text-2">Benedek Hegdus</div>
-                <div class="text-3">Welcome to my portfolio! <span class="typing"></span></div>
-            </div>
-        </div>
-    </section>
 
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">About me</h2>
+            <h2 class="title">Hockey Robot</h2>
             <div class="about-content">
                 <div class="column left">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                    <div class="text">Short description<span class="typing-2"></span></div>
+                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
                 </div>
-                <div class="column right">
-                    <div class="text">I'm Prakash and I'm a <span class="typing-2"></span></div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi ut voluptatum eveniet doloremque autem excepturi eaque, sit laboriosam voluptatem nisi delectus. Facere explicabo hic minus accusamus alias fuga nihil dolorum quae. Explicabo illo unde, odio consequatur ipsam possimus veritatis, placeat, ab molestiae velit inventore exercitationem consequuntur blanditiis omnis beatae. Dolor iste excepturi ratione soluta quas culpa voluptatum repudiandae harum non.</p>
-                    <a href="#">Download CV</a>
+                
+                <iframe width="520" height="315"
+                    src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
+                
+                <div class="column left">
+                    <div class="text"><br><br><br>The parts I worked on<span class="typing-2"></span></div>
+                    <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
                 </div>
+
+                <!-- <div class="column right">
+                    <div class="text"><span class="typing-2"></span></div>
+                        <div class="contact-btns">
+                            <a href="https://github.com/beni045">  
+                                <i class="fab fa-github-square"></i>
+                            </a>
+                            <a href="https://www.linkedin.com/in/benedek-hegedus/">  
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <div class="email-btn">  
+                                <i class="fas fa-envelope-square"></i>
+                                <div class="tooltip">
+                                    <span class="tooltiptext"><i class="fas fa-clipboard" id="email-clipboard"></i> b.hegedus45@gmail.com</span>
+                                  </div>
+
+                            </div>
+                        </div>
+                    <a href="bhegedus_resume.pdf" class="downloadcv-btn" download="bhegedus_resume.pdf">Download CV</a>
+                </div> -->
             </div>
         </div>
     </section>
 
-    <!-- mprojects section start -->
-    <section class="mprojects" id="mprojects">
-        <div class="max-width">
-            <h2 class="title">My mprojects</h2>
-            <div class="mproj-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-               </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- sprojects section start -->
-    <section class="sprojects" id="sprojects">
-        <div class="max-width">
-            <h2 class="title">My mprojects</h2>
-            <div class="sproj-content">
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
-                    </div>
-                </div>
-               </div>
-            </div>
-        </div>
-    </section>
 
     <!-- footer section start -->
     <footer>
