--- a/pages/hockeyrobot.html
+++ b/pages/hockeyrobot.html
@@ -53,10 +53,13 @@
                 </div>
 
                 <div class="column left">
-                    <div class="text"><br><br><br>The parts I worked on<span class="typing-2"></span></div>
+                    <div class="text">The parts I worked on<span class="typing-2"></span></div>
                     <p>I have always been curious about how things in the world work. To me, STEM provides the best answers as well as raises the most interesting questions. Over my years of studying in this field, I have been fortunate to learn a great deal ranging from Physics, to Engineering and Computer Science. I like to have a complete view of the technologies I work on, my favorites of which are computers and robotics. This complete view starts at the transistor and goes all the way to GUIs and actuators. I hope that one day most jobs can be automated, making the cost of living affordable and work hours short, allowing people to pursue their dreams and enjoy life.</p>
                 </div>
 
+                <iframe width="520" height="315"
+                    src="https://www.youtube.com/embed/0j5qIl5yVuE">
+                </iframe>
                 <!-- <div class="column right">
                     <div class="text"><span class="typing-2"></span></div>
                         <div class="contact-btns">
