update skills section

--- a/index.html
+++ b/index.html
@@ -114,23 +114,59 @@
             <div class="sproj-content">
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-paint-brush"></i>
-                        <div class="text">Web Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-stream"></i>
+                        <div class="text">Software</div>
+                        <div class="skills-left">
+                            <ul class="skills-list">
+                                <li><a data-weight="4" href="/tag/http">Python</a></li>
+                                <li><a data-weight="4" href="/tag/http">NumPy</a></li>
+                                <li><a data-weight="4" href="/tag/http">TensorFlow</a></li>
+                                <li><a data-weight="4" href="/tag/http">PyTorch</a></li>
+                                <li><a data-weight="4" href="/tag/http">ONNX</a></li>
+                                <li><a data-weight="4" href="/tag/http">PyQt5</a></li>
+                                <li><a data-weight="4" href="/tag/http">C++</a></li>
+                                <li><a data-weight="4" href="/tag/http">Linux</a></li>
+                                <li><a data-weight="4" href="/tag/http">Assembler</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-chart-line"></i>
-                        <div class="text">Advertising</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-microchip"></i>
+                        <div class="text">Hardware</div>
+                        <div class="skills-left">
+                            <ul class="skills-list">
+                                <li><a data-weight="4" href="/tag/http">Python</a></li>
+                                <li><a data-weight="4" href="/tag/http">NumPy</a></li>
+                                <li><a data-weight="4" href="/tag/http">TensorFlow</a></li>
+                                <li><a data-weight="4" href="/tag/http">PyTorch</a></li>
+                                <li><a data-weight="4" href="/tag/http">ONNX</a></li>
+                                <li><a data-weight="4" href="/tag/http">PyQt5</a></li>
+                                <li><a data-weight="4" href="/tag/http">C++</a></li>
+                                <li><a data-weight="4" href="/tag/http">Linux</a></li>
+                                <li><a data-weight="4" href="/tag/http">Assembler</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
-                        <i class="fas fa-code"></i>
-                        <div class="text">Apps Design</div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem quia sunt, quasi quo illo enim.</p>
+                        <i class="fas fa-charging-station"></i>
+                        <div class="text">Electronics</div>
+                        <div class="skills-left">
+                            <ul class="skills-list">
+                                <li><a data-weight="4" href="/tag/http">Python</a></li>
+                                <li><a data-weight="4" href="/tag/http">NumPy</a></li>
+                                <li><a data-weight="4" href="/tag/http">TensorFlow</a></li>
+                                <li><a data-weight="4" href="/tag/http">PyTorch</a></li>
+                                <li><a data-weight="4" href="/tag/http">ONNX</a></li>
+                                <li><a data-weight="4" href="/tag/http">PyQt5</a></li>
+                                <li><a data-weight="4" href="/tag/http">C++</a></li>
+                                <li><a data-weight="4" href="/tag/http">Linux</a></li>
+                                <li><a data-weight="4" href="/tag/http">Assembler</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                </div>
