--- a/index.html
+++ b/index.html
@@ -137,15 +137,13 @@
                         <div class="text">Hardware</div>
                         <div class="skills-left">
                             <ul class="skills-list">
-                                <li><a data-weight="4" href="/tag/http">Python</a></li>
-                                <li><a data-weight="4" href="/tag/http">NumPy</a></li>
-                                <li><a data-weight="4" href="/tag/http">TensorFlow</a></li>
-                                <li><a data-weight="4" href="/tag/http">PyTorch</a></li>
-                                <li><a data-weight="4" href="/tag/http">ONNX</a></li>
-                                <li><a data-weight="4" href="/tag/http">PyQt5</a></li>
-                                <li><a data-weight="4" href="/tag/http">C++</a></li>
-                                <li><a data-weight="4" href="/tag/http">Linux</a></li>
-                                <li><a data-weight="4" href="/tag/http">Assembler</a></li>
+                                <li><a data-weight="4" href="/tag/http">Arduino</a></li>
+                                <li><a data-weight="4" href="/tag/http">Raspberry Pi</a></li>
+                                <li><a data-weight="4" href="/tag/http">Atlas200DK</a></li>
+                                <li><a data-weight="4" href="/tag/http">SystemVerilog</a></li>
+                                <li><a data-weight="4" href="/tag/http">Quartus 3</a></li>
+                                <li><a data-weight="4" href="/tag/http">Cameras</a></li>
+                                <li><a data-weight="4" href="/tag/http">Bluetooth</a></li>
                             </ul>
                         </div>
                     </div>
@@ -156,15 +154,13 @@
                         <div class="text">Electronics</div>
                         <div class="skills-left">
                             <ul class="skills-list">
-                                <li><a data-weight="4" href="/tag/http">Python</a></li>
-                                <li><a data-weight="4" href="/tag/http">NumPy</a></li>
-                                <li><a data-weight="4" href="/tag/http">TensorFlow</a></li>
-                                <li><a data-weight="4" href="/tag/http">PyTorch</a></li>
-                                <li><a data-weight="4" href="/tag/http">ONNX</a></li>
-                                <li><a data-weight="4" href="/tag/http">PyQt5</a></li>
-                                <li><a data-weight="4" href="/tag/http">C++</a></li>
-                                <li><a data-weight="4" href="/tag/http">Linux</a></li>
-                                <li><a data-weight="4" href="/tag/http">Assembler</a></li>
+                                <li><a data-weight="4" href="/tag/http">Motors</a></li>
+                                <li><a data-weight="4" href="/tag/http">Servos</a></li>
+                                <li><a data-weight="4" href="/tag/http">IMU</a></li>
+                                <li><a data-weight="4" href="/tag/http">Gyroscope</a></li>
+                                <li><a data-weight="4" href="/tag/http">Bio-MEMS</a></li>
+                                <li><a data-weight="4" href="/tag/http">Pneumatics</a></li>
+                                <li><a data-weight="4" href="/tag/http">Soldering</a></li>
                             </ul>
                         </div>
                     </div>
