add project pages

--- a/index.html
+++ b/index.html
@@ -118,15 +118,15 @@
                         <div class="text">Software</div>
                         <div class="skills-left">
                             <ul class="skills-list">
-                                <li><a data-weight="4" href="/tag/http">Python</a></li>
-                                <li><a data-weight="4" href="/tag/http">NumPy</a></li>
-                                <li><a data-weight="4" href="/tag/http">TensorFlow</a></li>
-                                <li><a data-weight="4" href="/tag/http">PyTorch</a></li>
-                                <li><a data-weight="4" href="/tag/http">ONNX</a></li>
-                                <li><a data-weight="4" href="/tag/http">PyQt5</a></li>
-                                <li><a data-weight="4" href="/tag/http">C++</a></li>
-                                <li><a data-weight="4" href="/tag/http">Linux</a></li>
-                                <li><a data-weight="4" href="/tag/http">Assembler</a></li>
+                                <li><a data-weight="4" href="https://www.python.org">Python</a></li>
+                                <li><a data-weight="4" href="https://numpy.org/">NumPy</a></li>
+                                <li><a data-weight="4" href="https://www.tensorflow.org/">TensorFlow</a></li>
+                                <li><a data-weight="4" href="https://pytorch.org/">PyTorch</a></li>
+                                <li><a data-weight="4" href="https://onnx.ai/">ONNX</a></li>
+                                <li><a data-weight="4" href="https://riverbankcomputing.com/software/pyqt/intro">PyQt5</a></li>
+                                <li><a data-weight="4" href="https://en.cppreference.com/w/">C++</a></li>
+                                <li><a data-weight="4" href="https://www.linux.org/">Linux</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Assembly_language">Assembler</a></li>
                             </ul>
                         </div>
                     </div>
@@ -137,13 +137,13 @@
                         <div class="text">Hardware</div>
                         <div class="skills-left">
                             <ul class="skills-list">
-                                <li><a data-weight="4" href="/tag/http">Arduino</a></li>
-                                <li><a data-weight="4" href="/tag/http">Raspberry Pi</a></li>
-                                <li><a data-weight="4" href="/tag/http">Atlas200DK</a></li>
-                                <li><a data-weight="4" href="/tag/http">SystemVerilog</a></li>
-                                <li><a data-weight="4" href="/tag/http">Quartus 3</a></li>
-                                <li><a data-weight="4" href="/tag/http">Cameras</a></li>
-                                <li><a data-weight="4" href="/tag/http">Bluetooth</a></li>
+                                <li><a data-weight="4" href="https://www.arduino.cc/">Arduino</a></li>
+                                <li><a data-weight="4" href="https://www.raspberrypi.org/">Raspberry Pi</a></li>
+                                <li><a data-weight="4" href="https://e.huawei.com/en/products/cloud-computing-dc/atlas/atlas-200">Atlas200DK</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/SystemVerilog">SystemVerilog</a></li>
+                                <li><a data-weight="4" href="https://fpgasoftware.intel.com/">Quartus 3</a></li>
+                                <li><a data-weight="4" href="https://www.ximea.com/en/usb3-vision-camera/hyperspectral-usb3-cameras-mini">Cameras</a></li>
+                                <li><a data-weight="4" href="https://components101.com/wireless/hc-05-bluetooth-module">Bluetooth</a></li>
                             </ul>
                         </div>
                     </div>
@@ -154,13 +154,13 @@
                         <div class="text">Electronics</div>
                         <div class="skills-left">
                             <ul class="skills-list">
-                                <li><a data-weight="4" href="/tag/http">Motors</a></li>
-                                <li><a data-weight="4" href="/tag/http">Servos</a></li>
-                                <li><a data-weight="4" href="/tag/http">IMU</a></li>
-                                <li><a data-weight="4" href="/tag/http">Gyroscope</a></li>
-                                <li><a data-weight="4" href="/tag/http">Bio-MEMS</a></li>
-                                <li><a data-weight="4" href="/tag/http">Pneumatics</a></li>
-                                <li><a data-weight="4" href="/tag/http">Soldering</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Electric_motor">DC/AC/Stepper Motors</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Servomechanism">Servos</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Inertial_measurement_unit">IMU</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Vibrating_structure_gyroscope">Gyroscope</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Bio-MEMS">Bio-MEMS</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Pneumatics">Pneumatics</a></li>
+                                <li><a data-weight="4" href="https://en.wikipedia.org/wiki/Soldering">Soldering</a></li>
                             </ul>
                         </div>
                     </div>
