--- a/pages/hockey/hockeyrobot.html
+++ b/pages/hockey/hockeyrobot.html
@@ -20,12 +20,12 @@
     </div>
     <nav class="navbar">
         <div class="max-width">
-            <div class="logo"><a href="../index.html#home">B<span>H</span></a></div>
+            <div class="logo"><a href="../../index.html#home">B<span>H</span></a></div>
             <ul class="menu">
-                <li><a href="../index.html#home" class="menu-btn">Home</a></li>
-                <li><a href="../index.html#about" class="menu-btn">About</a></li>
-                <li><a href="../index.html#mprojects" class="menu-btn">Projects</a></li>
-                <li><a href="../index.html#sprojects" class="menu-btn">Skills</a></li>
+                <li><a href="../../index.html#home" class="menu-btn">Home</a></li>
+                <li><a href="../../index.html#about" class="menu-btn">About</a></li>
+                <li><a href="../../index.html#mprojects" class="menu-btn">Projects</a></li>
+                <li><a href="../../index.html#sprojects" class="menu-btn">Skills</a></li>
             </ul>
             <div class="menu-btn">
                 <i class="fas fa-bars"></i>
@@ -41,7 +41,7 @@
             <div class="about-content">
                 <div class="column left">
                     <div class="text">Short description</div>
-                    <p>This robot was my 3rd year project. It is a training assistant for hockey players, especially targeted for younger players. The player can move a hockey puck around and the robot will try to hit the puck away from them. This is done through poke and sweep checks, similarly to hockey games. A pneumatic actuator was used to extend the hockey stick and two DC motors were used to turn for tracking and sweep checks. The device can be operating manually or automatically. During manual operation, a PlayStation controller can be used to move all the actuators. For automatic operation, color-based tracking is used.</p>
+                    <p>This robot was my 3rd year IGEN project. It is a training assistant for hockey players, especially targeted for younger players. The player can move a hockey puck around and the robot will try to hit the puck away from them. This is done through poke and sweep checks, similarly to hockey games. A pneumatic actuator was used to extend the hockey stick and two DC motors were used to turn for tracking and sweep checks. The device can be operating manually or automatically. During manual operation, a PlayStation controller can be used to move all the actuators. For automatic operation, color-based tracking is used.</p>
                 </div>
                 
                 <iframe width="520" height="315"
@@ -49,7 +49,7 @@
                 </iframe>
                 
                 <div class="hockey-poster">
-                    <img src="images/danglemaster_poster.jpg"></img>
+                    <img src="../images/danglemaster_poster.jpg"></img>
                 </div>
 
                 <div class="column left">
