add github icon to hockey

--- a/pages/hockey/hockeyrobot.html
+++ b/pages/hockey/hockeyrobot.html
@@ -37,7 +37,9 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title">Hockey Robot</h2>
+            <h2 class="title"><a href="https://github.com/beni045">  
+                <i class="fab fa-github-square"></i>
+            </a>Hockey Robot</h2>
             <div class="about-content">
                 <div class="column left">
                     <div class="text">Short description</div>
