add github links

--- a/pages/hockey/hockeyrobot.html
+++ b/pages/hockey/hockeyrobot.html
@@ -37,7 +37,7 @@
     <!-- about section start -->
     <section class="about" id="about">
         <div class="max-width">
-            <h2 class="title"><a href="https://github.com/beni045">  
+            <h2 class="title"><a href="https://github.com/beni045/DangleMaster">  
                 <i class="fab fa-github-square"></i>
             </a>Hockey Robot</h2>
             <div class="about-content">
